added the answer to the assignment

--- a/module2/index.html
+++ b/module2/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Module 2 Assignment</title>
+</head>
+<body>
+    <h1 id="haupt">RUKUNGIRI IN A NUTSHELL</h1>
+    <div class="container">
+    
+    <section id="food">
+<h2 id="egg">FOOD ./emere/.</h2>
+    <p>Rukungiri is not only blessed with a beautifully ever green landscap but also with fertile lands that enable people to organically grow a wide variety of food crops. When it comes to food, sauce sauce sauce sauce and more sauce. This is because the most loved food in Rukungiri is rich in starch and it goes really well with different sauces. this food includes Matoke, Posho, Rice, Sweet Potatoes, Irish potatoes, jams to mention but a few. The sauces include, ground nut, chicken fish beans pork beef goat and so many others. This food is always served in large quantities so prepare before you decide to there.</p> 
+    </section>
 
+  <section id="music">   
+      <h2 id="sola">MUSIC ./omuzikyi/.</h2>
+     <p>Traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional drums(engoma), shakers, hands, harmonies, soloists, dancing, enanga, endingidi,traditional </p> 
+
+  </section>
+     
+    <section id="clothing">  
+        <h2 id="mode">CLOTHES./Ebijwaalo/.</h2>
+       <p>ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda,   ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju, busuuti, emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju, busuuti,  emishanana, ekooti, omwenda,ekanju, busuuti, emishanana, ekooti, omwenda, ekanju</p>
+    </section>
+</div> 
+
+</body>
+</html>
