--- a/module2/index.html
+++ b/module2/index.html
@@ -12,7 +12,7 @@
     
     <section id="food">
 <h2 id="egg">FOOD ./emere/.</h2>
-    <p>Rukungiri is not only blessed with a beautifully ever green landscap but also with fertile lands that enable people to organically grow a wide variety of food crops. When it comes to food, sauce sauce sauce sauce and more sauce. This is because the most loved food in Rukungiri is rich in starch and it goes really well with different sauces. this food includes Matoke, Posho, Rice, Sweet Potatoes, Irish potatoes, jams to mention but a few. The sauces include, ground nut, chicken fish beans pork beef goat and so many others. This food is always served in large quantities so prepare before you decide to there.</p> 
+    <p>Rukungiri is not only blessed with a beautifully ever green landscape but also with fertile soils that enable people to organically grow a wide variety of food crops. When it comes to food, sauce sauce sauce sauce and more sauce. This is because the most loved food in Rukungiri is rich in starch and it goes really well with different sauces. This food includes Matoke, Posho, Rice, Sweet Potatoes, Irish potatoes, jams to mention but a few. The sauces include, ground nut, chicken, fish, beans, pork, beef goat and so many others. Food is generally served in large quantities, so prepare before you decide to go there.</p> 
     </section>
 
   <section id="music">   
