added script to collapse menu on losing focus

--- a/week3Assignment/index.html
+++ b/week3Assignment/index.html
@@ -54,6 +54,11 @@
     </Section>
   </main>
 <script src="js/jquery-3.5.1.js"></script>
+<script>
+  $(document).on('click',function(){
+  $('.collapse').collapse('hide');
+  })
+  </script> 
     <script src="js/bootstrap.min.js"></script>
     
 </body>
